# image_converter

./: CLAUDE.md  Cargo.toml  README.md  README_UI_TEST.md  build.rs  build_portable.bat  config.json  performance_optimizations.md  test_functionality.rs  test_pdf_conversion.rs  test_printpdf_correct.rs  test_simple_pdf.rs  学习.txt  学习2.txt
.claude/: settings.local.json
resources/: README.md
src/: app.rs  lib.rs  main.rs
src/converter/: batch_processor.rs  image_converter.rs  image_to_pdf.rs  mod.rs  pdf_converter.rs  simd_optimizer.rs  simple_image_to_pdf.rs  simple_watermark.rs  turbo_encoder.rs  webp_encoder.rs
src/ui/: components.rs  menu_bar.rs  mod.rs  styles.rs
src/utils/: config.rs  file_utils.rs  mod.rs
