[package]
name = "image_converter"
version = "0.1.0"
edition = "2021"
authors = ["国振 <your.email@example.com>"]
description = "A professional image format converter with batch processing capabilities"
license = "MIT"
default-run = "image_converter"

[dependencies]
egui = "0.27"
eframe = { version = "0.27", features = ["default_fonts", "glow"] }

image = { version = "0.25", features = ["jpeg", "png", "webp", "bmp", "tiff"] }
pdfium-render = { version = "0.8", features = ["image"] }

walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
dirs = "5.0"
rfd = "0.14"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.30"

# --- 【引入新引擎】 ---
rayon = "1.10"      # 并行处理库
once_cell = "1.19"  # 单例模式库
num_cpus = "1.16"

# --- 【SIMD优化库】 ---
fast_image_resize = "4.2"  # 专业SIMD图像缩放库
wide = "0.7"              # SIMD数学运算加速
mozjpeg = "0.10"          # 高性能JPEG编码器
zune-jpeg = "0.4"         # 超快JPEG解码器
webp = "0.3"             # WebP现代图像格式支持
imageproc = "0.25"       # 高级图像处理（文字渲染、几何变换）
rusttype = "0.9"         # 字体渲染引擎
printpdf = "0.7"         # PDF生成库

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
num_cpus = "1.16"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
